# TheCoolerEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  IMGUI_SOURCES_FILES  LICENSE  LICENSE.txt  UpdateSubmodules.bat  build.bat
Editor/: CMakeLists.txt  CMakePresets.json
Editor/Code/Include/: Application.h  FileExplorerWindow.h  ImGuiLayer.h  InspectorWindow.h  Layer.h  LoggerWindow.h  MainWindow.h  RHIImGui.h  RHIImGuiRenderer.h  SceneGraphWindow.h  SubWindow.h  UiHelper.h  UiWindow.h  VulkanImGui.h  VulkanImGuiRenderer.h
Editor/Code/Include/Components/: ComponentRegistry.h  EditorGameComponent.h
Editor/Code/Include/Components.h/: ComponentRegistry.h  EditorGameComponent.h
Editor/Code/Include/Components.h/CustomComponents/: PressurePlateComponent.h
Editor/Code/Include/Components/CustomComponents/: PressurePlateComponent.h
Editor/Code/Include/Debugging/: TCLogLevel.h  TCLogger.h  TCLogger.inl
Editor/Code/Include/InspectorComponent/: UiEditorGameComp.h  UiInspectorComponent.h  UiLightComponent.h  UiMeshComponent.h  UiPlayerControllerComponent.h  UiRigidbodyComponent.h  UiTransformComponent.h
Editor/Code/Include/Resources/: ImGuiTexture.h
Editor/Code/Inlude/: Application.h  ImGuiLayer.h  InspectorWindow.h  Layer.h  RHIImGui.h  SceneGraphWindow.h  UiWindow.h  VulkanImGui.h
Editor/Code/Inlude/InspectorComponent/: UiMeshComponent.h  UiTransformComponent.h
Editor/Code/include/: Application.h  ImguiCooler.h
Editor/Code/src/: Application.cpp  FileExplorerWindow.cpp  ImGuiLayer.cpp  ImguiCooler.cpp  InspectorWindow.cpp  Layer.cpp  LoggerWindow.cpp  MainWindow.cpp  RHIImGuiRenderer.cpp  SceneGraphWindow.cpp  SubWindow.cpp  UiHelper.cpp  VulkanImGui.cpp  VulkanImGuiRenderer.cpp  main.cpp
Editor/Code/src/Components/: ComponentRegistry.cpp
Editor/Code/src/Components/CustomComponents/: PressurePlateComponent.cpp
Editor/Code/src/Debugging/: TCLogger.cpp
Editor/Code/src/InspectorComponent/: UiEditorGameComp.cpp  UiLightComponent.cpp  UiMeshComponent.cpp  UiPlayerControllerComponent.cpp  UiRigidbodyComponent.cpp  UiTransformComponent.cpp
Editor/Code/src/Resources/: ImGuiTexture.cpp
Engine/: CMakeLists.txt  shader.bat
Engine/Code/Shaders/: base.frag  base.vert  grid.frag  grid.vert  lit.frag  skybox.frag  skybox.vert  unlit.frag
Engine/Code/include/: EngineExport.h
Engine/Code/include/Assertion/: Assertion.h
Engine/Code/include/Core/: Application.h  Utils.h
Engine/Code/include/Core/Assertion/: Assertion.h
Engine/Code/include/Core/Audio/: SoundManager.h
Engine/Code/include/Core/Interfaces/: ApiInterface.h  IBuffer.h  ICameraDescriptor.h  ICommandPool.h  IDescriptorPool.h  IGraphicPipeline.h  IImage.h  IInstance.h  ILogicalDevice.h  IObjectDescriptor.h  IPhysicalDevice.h  IRenderObject.h  IRenderPass.h  IShader.h  ISurface.h  ISwapChain.h  IValidationLayers.h  VulkanInterface.h
Engine/Code/include/Core/Logger/: LogColor.h  LogLevel.h  Logger.h  Logger.inl  Logger.tpp
Engine/Code/include/Core/Multithread/: ThreadPool.h
Engine/Code/include/Core/Renderer/: Renderer.h
Engine/Code/include/Core/Window/: GLInputHandler.h  GLWindow.h  IInputHandler.h  IWindow.h  InputAction.h
Engine/Code/include/GamePlay/: Camera.h  Component.h  ComponentsPool.h  GameObject.h  Meshcomponent.h  Scene.h  ServiceLocator.h  System.h  TextureComponent.h  TransformComponent.h
Engine/Code/include/GamePlay/Components/: CameraComponent.h  Component.h  ComponentsPool.h  GameComponent.h  LightComponent.h  MaterialComponent.h  Meshcomponent.h  PlayerControllerComponent.h  RigidBodyComponent.h  TransformComponent.h
Engine/Code/include/GamePlay/ComponentsBase/: Camera.h  Light.h  Material.h
Engine/Code/include/GamePlay/Others/: Camera.h  CameraGO.h  GameObject.h  LightGO.h  Scene.h
Engine/Code/include/GamePlay/Systems/: ComponentSystem.h  EventSystem.h  GameComponentSystem.h  MeshRendererSystem.h  PhysicsSystem.h  RenderSystem.h  System.h  TransformSystem.h
Engine/Code/include/Interfaces/: ApiInterface.h  VulkanInterface.h
Engine/Code/include/Logger/: LogColor.h  LogLevel.h  Logger.h
Engine/Code/include/Math/: TheCoolerMath.h  Transform.h  mat4.h  mat4.inl  quat.h  quat.inl  vec2.h  vec2.inl  vec3.h  vec3.inl
Engine/Code/include/Physics/: ContactListener.h  Layers.h  RigidBody.h
Engine/Code/include/Ressources/: IResource.h  IResources.h  IRessources.h  Mesh.h  ResourceManager.h  ResourceManager.inl  Texture.h  Vertex.h
Engine/Code/include/Window/: GLWindow.h  IWindow.h
Engine/Code/src/: Application.cpp  main.cpp
Engine/Code/src/Core/: Application.cpp  Utils.cpp
Engine/Code/src/Core/Audio/: SoundManager.cpp
Engine/Code/src/Core/Interfaces/: ICommandPool.cpp
Engine/Code/src/Core/Logger/: Logger.cpp
Engine/Code/src/Core/Multithread/: ThreadPool.cpp
Engine/Code/src/Core/Renderer/: Renderer.cpp
Engine/Code/src/Core/Window/: GLInputHandler.cpp  GLWindow.cpp
Engine/Code/src/GamePlay/: Camera.cpp  Component.cpp  ComponentsPool.cpp  GameObject.cpp  MeshComponent.cpp  Scene.cpp  ServiceLocator.cpp  TextureComponent.cpp  TransformComponent.cpp  TransformSystem.cpp
Engine/Code/src/GamePlay/Components/: CameraComponent.cpp  Component.cpp  ComponentsPool.cpp  GameComponent.cpp  LightComponent.cpp  MaterialComponent.cpp  MeshComponent.cpp  PlayerControllerComponent.cpp  RigidBodyComponent.cpp  TextureComponent.cpp  TransformComponent.cpp
Engine/Code/src/GamePlay/Others/: Camera.cpp  (+4 more)
Engine/Code/src/Logger/: Logger.cpp
Engine/Code/src/Math/: Transform.cpp  mat4.cpp  quat.cpp  vec2.cpp  vec3.cpp
Engine/Code/src/Maths/: main.cpp
Engine/Code/src/Physics/: ContactListener.cpp  Layers.cpp  RigidBody.cpp
Engine/Code/src/Ressources/: IResource.cpp  Mesh.cpp  ResourceManager.cpp  Texture.cpp  Vertex.cpp
Engine/Code/src/Window/: GLWindow.cpp
Engine/Tests/: .gitmodules  CMakeLists.txt
Engine/Tests/UnitTests/: CMakeLists.txt  main.cpp
Engine/Tests/UnitTests/include/: MathUtilsUT.h  Vec3UT.h  mat4UT.h  quatUT.h  vec2UT.h
Engine/Tests/UnitTests/src/: MathUtilsUT.cpp  Vec3UT.cpp  mat4UT.cpp  quatUT.cpp  vec2UT.cpp
libs/: CMakeLists.txt
(+62 files in other folders)
